test/domains/compilerErrors/notsupportedRectOps-assoc.good
notsupportedRectOps-assoc.chpl:3: In function 'test':
notsupportedRectOps-assoc.chpl:5: error: associative domains do not support '.low'
  notsupportedRectOps-assoc.chpl:16: called as test(dom: DefaultAssociativeDom(int(64),true))
